<?php

namespace Jawira\CaseConverter;

use RuntimeException;

class CaseConverterException extends RuntimeException
{
}
